--- a/index.html
+++ b/index.html
@@ -1,207 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>图片混淆</title>
-<style>
-.normal_button{
-	min-width: 4rem;
-    height: 2rem;
-    line-height: 2rem;
-    font-size: 1rem;
-    padding:0 0.5rem;
-    margin:0 0.5rem;
-	border:0;
-    border-radius:6px;
-	display: inline-block;
-    position: relative;
-    vertical-align: middle;
-}
-.ipt_btn{
-    position:absolute;
-    left:0;
-    top:0;
-    width:100%;
-    height:100%;
-    opacity: 0;
-    background-color: #ccc;
-}
-</style>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<style type="text/css">@keyframes wpSuperSnow_l {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; transform:translate3D(500px,1500px,0) rotate(250deg);}}@keyframes wpSuperSnow_r {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; transform:translate3D(-500px,1500px,0) rotate(-500deg);}}@-webkit-keyframes wpSuperSnow_l {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; -webkit-transform:translate3D(500px,1500px,0) rotate(250deg);}}@-webkit-keyframes wpSuperSnow_r {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; -webkit-transform:translate3D(-500px,1500px,0) rotate(-500deg);}}@-moz-keyframes wpSuperSnow_l {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; -moz-transform:translate3D(500px,1500px,0) rotate(250deg);}}@-moz-keyframes wpSuperSnow_r {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; -moz-transform:translate3D(-500px,1500px,0) rotate(-500deg);}}@-ms-keyframes wpSuperSnow_l {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; -ms-transform:translate3D(500px,1500px,0) rotate(250deg);}}@-ms-keyframes wpSuperSnow_r {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; -ms-transform:translate3D(-500px,1500px,0) rotate(-500deg);}}@keyframes wpSuperSnowFlake_l {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; transform:translate3D(500px,1500px,0) rotateY(720deg) rotate(250deg);}}@keyframes wpSuperSnowFlake_r {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; transform:translate3D(-500px,1500px,0) rotateY(-720deg) rotate(-500deg);}}@-webkit-keyframes wpSuperSnowFlake_l {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; -webkit-transform:translate3D(500px,1500px,0) rotateY(720deg) rotate(250deg);}}@-webkit-keyframes wpSuperSnowFlake_r {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; -webkit-transform:translate3D(-500px,1500px,0) rotateY(-720deg) rotate(-500deg);}}@-moz-keyframes wpSuperSnowFlake_l {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; -moz-transform:translate3D(500px,1500px,0) rotateY(720deg) rotate(250deg);}}@-moz-keyframes wpSuperSnowFlake_r {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; -moz-transform:translate3D(-500px,1500px,0) rotateY(-720deg) rotate(-500deg);}}@-ms-keyframes wpSuperSnowFlake_l {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; -ms-transform:translate3D(500px,1500px,0) rotateY(720deg) rotate(250deg);}}@-ms-keyframes wpSuperSnowFlake_r {0% {opacity:0;} 25% {opacity:1;} 100% {opacity:0; -ms-transform:translate3D(-500px,1500px,0) rotateY(-720deg) rotate(-500deg);}}</style>
 </head>
-<body>
-<div style="text-align: center;">
-<h1>图片混淆</h1>
-<div style="display: inline-block; max-width: 400px;">基于空间填充曲线的新一代图片混淆。混淆算法保持像素的空间相关性，混淆图被压缩仍能保持色彩。仅供技术交流使用。此程序生成的图片格式为jpeg，质量0.95。</div>
-<div>&ZeroWidthSpace;</div>
-<div><span class="normal_button" style="background-color: #180161;color:#fff;">选择图片<input type="file" accept="image/*" id="ipt" class="ipt_btn" /></span><button id="enc" class="normal_button" style="background-color: #4f1787;color:#fff;">混淆</button><button id="dec" class="normal_button" style="background-color: #eb3678;color:#fff;">解混淆</button><button id="re" class="normal_button" style="background-color: #fb773c;color:#fff;">还原</button></div>
-<div>&ZeroWidthSpace;</div>
-<div><img id="display-img" style="max-width: calc(100vw - 32px); max-height: calc(100vh - 32px); display: none;" /></div>
-</div>
-<script>
-function gilbert2d(width, height) {
-    /**
-     * Generalized Hilbert ('gilbert') space-filling curve for arbitrary-sized
-     * 2D rectangular grids. Generates discrete 2D coordinates to fill a rectangle
-     * of size (width x height).
-     */
-    const coordinates = [];
+<body class="">
+	
+		<title>清新简洁的网站域名转售引导网页模板 - bokequ.com</title>
+      <link rel="shortcuticon" href="http://www.bokequ.com/wo/favicon.ico">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!--[if lte IE 8]><script src="/js/html5shiv.js"></script><![endif]-->
+      <link rel="stylesheet" href="http://www.bokequ.com/blog/16/css/main.css">
+		<!--[if lte IE 9]><link rel="stylesheet" href="/css/ie9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="/css/ie8.css" /><![endif]-->
+		<noscript>&lt;link rel="stylesheet" href="/css/noscript.css" /&gt;</noscript>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-    if (width >= height) {
-        generate2d(0, 0, width, 0, 0, height, coordinates);
-    } else {
-        generate2d(0, 0, 0, height, width, 0, coordinates);
-    }
+				<!-- Main -->
+					<section id="main">
+						<header>
+							<span class="avatar"><img src="http://www.bokequ.com/blog/16/headimg_dl" alt=""></span>
+							<h1>张朝琴.我爱你</h1>
+							<p>首先感谢您的来访。</p>
+							<p>每个域名都有它的含义。</p>
+							<p>如果你爱的人也叫此名。</p>
+							<p>可通过下方式与我联系购买此域名。</p>
+						</header>
+						
+						<footer>
+							<ul class="icons">
+							    <li><a href="TEL:18888888888" class="fa-phone">电话</a></li></ul>
+							<ul class="icons">
+							    <li><a href="http://wpa.qq.com/msgrd?v=3&uin=10001&site=qq&menu=yes" class="fa-QQ">QQ</a></li></ul>
+							<ul class="icons">
+							    <li><a href="mailto:bokequ@qq.com" class="fa-envelope">邮箱</a></li></ul>
+						</footer>
+					</section>
 
-    return coordinates;
-}
+				<!-- Footer -->
+					<footer id="footer">
+							<h1 class="copyright">Copyright © 2017-2021 <a href="http://www.bokequ.com/">张朝琴我爱你</a> All rights reserved.</h1><!-- 版权-->
+					</footer>
+					
+<audio controls autoplay>
+    <source src="http://www.bokequ.com/blog/16/img/201904223001470302666.mp3">
+</audio>
+			</div>
 
-function generate2d(x, y, ax, ay, bx, by, coordinates) {
-    const w = Math.abs(ax + ay);
-    const h = Math.abs(bx + by);
-
-    const dax = Math.sign(ax), day = Math.sign(ay); // unit major direction
-    const dbx = Math.sign(bx), dby = Math.sign(by); // unit orthogonal direction
-
-    if (h === 1) {
-        // trivial row fill
-        for (let i = 0; i < w; i++) {
-            coordinates.push([x, y]);
-            x += dax;
-            y += day;
-        }
-        return;
-    }
-
-    if (w === 1) {
-        // trivial column fill
-        for (let i = 0; i < h; i++) {
-            coordinates.push([x, y]);
-            x += dbx;
-            y += dby;
-        }
-        return;
-    }
-
-    let ax2 = Math.floor(ax / 2), ay2 = Math.floor(ay / 2);
-    let bx2 = Math.floor(bx / 2), by2 = Math.floor(by / 2);
-
-    const w2 = Math.abs(ax2 + ay2);
-    const h2 = Math.abs(bx2 + by2);
-
-    if (2 * w > 3 * h) {
-        if ((w2 % 2) && (w > 2)) {
-            // prefer even steps
-            ax2 += dax;
-            ay2 += day;
-        }
-
-        // long case: split in two parts only
-        generate2d(x, y, ax2, ay2, bx, by, coordinates);
-        generate2d(x + ax2, y + ay2, ax - ax2, ay - ay2, bx, by, coordinates);
-
-    } else {
-        if ((h2 % 2) && (h > 2)) {
-            // prefer even steps
-            bx2 += dbx;
-            by2 += dby;
-        }
-
-        // standard case: one step up, one long horizontal, one step down
-        generate2d(x, y, bx2, by2, ax2, ay2, coordinates);
-        generate2d(x + bx2, y + by2, ax, ay, bx - bx2, by - by2, coordinates);
-        generate2d(x + (ax - dax) + (bx2 - dbx), y + (ay - day) + (by2 - dby),
-            -bx2, -by2, -(ax - ax2), -(ay - ay2), coordinates);
-    }
-}
-</script>
-<script>
-const img = document.getElementById("display-img")
-function setsrc(src){
-    URL.revokeObjectURL(img.src)
-    img.src = src
-    img.style.display = "inline-block"
-}
-function encrypt(img){
-    const cvs = document.createElement("canvas")
-    const width = cvs.width = img.width
-    const height = cvs.height = img.height
-    const ctx = cvs.getContext("2d")
-    ctx.drawImage(img, 0, 0)
-    const imgdata = ctx.getImageData(0, 0, width, height)
-    const imgdata2 = new ImageData(width, height)
-    const curve = gilbert2d(width, height)
-    const offset = Math.round((Math.sqrt(5) - 1) / 2 * width * height)
-    for(let i = 0; i < width * height; i++){
-        const old_pos = curve[i]
-        const new_pos = curve[(i + offset) % (width * height)]
-        const old_p = 4 * (old_pos[0] + old_pos[1] * width)
-        const new_p = 4 * (new_pos[0] + new_pos[1] * width)
-        imgdata2.data.set(imgdata.data.slice(old_p, old_p + 4), new_p)
-    }
-    ctx.putImageData(imgdata2, 0, 0)
-    cvs.toBlob(b => {
-        setsrc(URL.createObjectURL(b))
-    }, "image/jpeg", 0.95)
-    //})
-}
-function decrypt(img){
-    const cvs = document.createElement("canvas")
-    const width = cvs.width = img.width
-    const height = cvs.height = img.height
-    const ctx = cvs.getContext("2d")
-    ctx.drawImage(img, 0, 0)
-    const imgdata = ctx.getImageData(0, 0, width, height)
-    const imgdata2 = new ImageData(width, height)
-    const curve = gilbert2d(width, height)
-    const offset = Math.round((Math.sqrt(5) - 1) / 2 * width * height)
-    for(let i = 0; i < width * height; i++){
-        const old_pos = curve[i]
-        const new_pos = curve[(i + offset) % (width * height)]
-        const old_p = 4 * (old_pos[0] + old_pos[1] * width)
-        const new_p = 4 * (new_pos[0] + new_pos[1] * width)
-        imgdata2.data.set(imgdata.data.slice(new_p, new_p + 4), old_p)
-    }
-    ctx.putImageData(imgdata2, 0, 0)
-    cvs.toBlob(b => {
-        setsrc(URL.createObjectURL(b))
-    }, "image/jpeg", 0.95)
-    //})
-}
-const ipt = document.getElementById("ipt")
-ipt.onchange = () => {
-    if(ipt.files.length > 0){
-        setsrc(URL.createObjectURL(ipt.files[0]))
-    }
-}
-const btn_enc = document.getElementById("enc")
-btn_enc.onclick = () => {
-    if(img.src){
-        img.style.display = "none"
-        requestAnimationFrame(() => {
-            requestAnimationFrame(() => {
-                encrypt(img)
-            })
-        })
-    }
-}
-const btn_dec = document.getElementById("dec")
-btn_dec.onclick = () => {
-    if(img.src){
-        img.style.display = "none"
-        requestAnimationFrame(() => {
-            requestAnimationFrame(() => {
-                decrypt(img)
-            })
-        })
-    }
-}
-const btn_restore = document.getElementById("re")
-btn_restore.onclick = () => {
-    if(ipt.files.length > 0){
-        setsrc(URL.createObjectURL(ipt.files[0]))
-    }
-}
-</script>
+		<!-- Scripts -->
+			<!--[if lte IE 8]><script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script><![endif]-->
+			<script>
+				if ('addEventListener' in window) {
+					window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
+					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+				}
+			</script>
+       <script src="http://www.bokequ.com/blog/16/js/jquery.min.js"></script>
+<script src="http://www.bokequ.com/blog/16/js/su.js"></script>
+<script type="text/javascript">jQuery(document).ready(function($){
+$('body').wpSuperSnow({
+flakes: ['http://www.bokequ.com/blog/16/img/007.png','http://www.bokequ.com/blog/16/img/006.png','http://www.bokequ.com/blog/16/img/004.png','http://www.bokequ.com/blog/16/img/002.png','http://www.bokequ.com/blog/16/img/001.png','http://www.bokequ.com/blog/16/img/003.png','http://www.bokequ.com/blog/16/img/002.png','http://www.bokequ.com/blog/16/img/001.png'],
+totalFlakes: '290',
+zIndex: '999999',
+maxSize: '30',
+maxDuration: '20',
+useFlakeTrans: false
+});
+});</script>
 </body>
 </html>
