--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 <title>图片混淆</title>
 </head>
-<body>
-<!-- 添加背景canvas -->
-<canvas id="background-canvas" style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;"></canvas>
-
+<style>
 <style>
 /* 添加背景样式 */
 body {
@@ -110,9 +107,25 @@ span {
   }
 }
 </style>
-
+input{
+background:#fff;
+border:1px solid #aaa;
+height:1rem;
+}
+button{
+background:#fff;
+border:1px solid #888;
+height:1.65rem;
+}
+select{
+background:#fff;
+border:1px solid #aaa;
+height:1.5rem;
+}
+</style>
+<body>
+<canvas id="background-canvas" style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;"></canvas>
 <div style="padding:0 16px;text-align:center">
-<!-- 原有内容保持不变 -->
 <h1>Ybzj图片混淆</h1>
 
 <input style="border:0px;display:none" onchange="ipt()" type="file" id="ipt" accept="image/*"></input>
@@ -137,7 +150,7 @@ span {
 
 <div id="imgwrap">
 <div id="picinfo" style="font-size:1rem;color:#666;padding:0.5rem 0"></div>
-
+<img style="max-width:100%" id="kimg" src="data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWNgYGBgAAAABQABh6FO1AAAAABJRU5ErkJggg==" />
 </div>
 <div id="loading" style="display:none;color:#666;padding:0.5rem 0">
 正在生成中...
@@ -164,7 +177,6 @@ span {
 </div>
 
 </div>
-
 <script>
 // 粒子背景特效
 function initParticleBackground() {
@@ -279,7 +291,6 @@ function initParticleBackground() {
 
 // 页面加载完成后初始化背景特效
 window.addEventListener('load', initParticleBackground);
-
 </script>
 <script>
 var md5=(function(){
