--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ height:1.5rem;
 <body>
 <canvas id="background-canvas" style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;"></canvas>
 <div style="padding:0 16px;text-align:center">
-<h1>Ybzj图片混淆</h1>
+<h1>图片混淆</h1>
 
 <input style="border:0px;display:none" onchange="ipt()" type="file" id="ipt" accept="image/*"></input>
 <button onclick="xuanze()">选择图片</button>&emsp;<button onclick="baocun()">保存图片</button>
@@ -163,15 +163,15 @@ height:1.5rem;
 </div>
 
 <div style="color:#666;padding:1rem 0 2rem 0">
-<!--
+
 <a style="color:#666" href="javascript:alert(INFO3)">备用网址</a>
 <span>&ensp;|&ensp;</span>
 <a style="color:#666" href="javascript:alert(INFO2)">使用须知</a>
 <span>&ensp;|&ensp;</span>
 <a style="color:#666" href="javascript:bcwy()">下载网页</a>
 <br />
--->
-<span>v0.2.1 by ybzjdsd 原网址https://ybzjdsd.gitee.io/tphx</span>
+
+<span>v1.0.1 by jn</span>
 </div>
 
 </div>
