--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 <title>图片混淆</title>
-<link rel="stylesheet" href="jn/style.css">
+<link rel="stylesheet" href="/jn/style.css">
 </head>
 
 <body>
@@ -60,6 +60,6 @@
 </div>
 
 </div>
-<script type="text/javascript" src="jn/script.js"></script>
+<script type="text/javascript" src="/jn/script.js"></script>
 </body>
 </html>
