--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="/jn/style.css">
 </head>
 
+<script src="/jn/script.js"></script>
+
 <body>
 <canvas id="background-canvas" style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;"></canvas>
 <div style="padding:0 16px;text-align:center">
@@ -60,6 +62,5 @@
 </div>
 
 </div>
-<script type="text/javascript" src="/jn/script.js"></script>
 </body>
 </html>
