--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 <link rel="stylesheet" href="/jn/style.css">
 </head>
 
-<script src="/jn/script.js"></script>
-
 <body>
+<script src="/jn/main.js"></script>
 <canvas id="background-canvas" style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;"></canvas>
 <div style="padding:0 16px;text-align:center">
 <h1>图片混淆</h1>
