--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <option value="rotate">分块旋转混淆</option>
     <option value="chaotic">混沌映射像素置乱</option>
     <option value="diffusion">分块扩散混淆</option>
+    <option value="arnold">Arnold变换</option>
 </select>
 <br />
 <span>密钥：</span>
