--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <option value="pe2">兼容PicEncrypt: 行+列模式</option>
     <option value="xor">XOR像素混淆</option>
     <option value="rotate">分块旋转混淆</option>
-    <option value="chaotic">混沌像素置乱</option>
+    <option value="chaotic">混沌序列置乱</option>
     <option value="diffusion">分块扩散混淆</option>
     <option value="arnold">Arnold变换</option>
 </select>
