--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <br />
 
-            <span>v1.0.1 by jn</span>
+            <span>v1.0.0 by jn856</span>
         </div>
 
     </div>
