--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>图夹工具 - 文件隐写实现</title>
+    <title>图夹工具 - 66文件隐写实现</title>
     <style>
         * {
             margin: 0;
