--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         </div>
 
         <div style="color:#666;padding:1rem 0 2rem 0">
+<a style="color:#666" href="https://t.me/jntphx">加入组织</a>
 
             <br />
 
