--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <canvas id="background-canvas" style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;"></canvas>
     <div style="padding:0 16px;text-align:center">
-        <h1>图片55335混淆</h1>
+        <h1>图片混淆</h1>
         <input style="border:0px;display:none" onchange="ipt()" type="file" id="ipt" accept="image/*"></input>
         <button onclick="xuanze()">选择图片</button>&emsp;<button onclick="baocun()">保存图片</button>
         <br />
