--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             否则后果作者概不负责！
         </div>
         <div style="color:#666;padding:1rem 0 2rem 0">
-            <a style="color:#666" href="https://t.me/jntphx">加入组织（需要魔法）</a>
+            <a style="color:#666" href="https://t.me/jntphx">加入组织</a>
             <br />
             <span>v1.0.0 by jn856</span>
         </div>
