--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <br />
         <span>模式：</span>
         <select id="slct" onchange="selectonchange()">
-            <option value="Hilbert">小番茄</option>
+            <option value="Hilbert">Hilbert曲线像素混淆</option>
             <option value="b">方块混淆</option>
             <option value="c2">行像素混淆</option>
             <option value="c">像素混淆</option>
