--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="/jn/css/style.css" rel="stylesheet">
 </head>
-    <script src="/jn/js/script.js"></script>
+    <script src="/jn/script.js"></script>
 <body data-theme="dark">
     <!-- 粒子背景 -->
     <div class="particles" id="particles"></div>
